--- a/src/main/resources/templates/pages/confirmation-business.html
+++ b/src/main/resources/templates/pages/confirmation-business.html
@@ -116,40 +116,34 @@
                             <div class="col-md-12 mt-2 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Bedrijfsgegevens</h4>
                             </div>
-                            <div class="col-md-2 form-group">
+                            <div class="col-md-4 form-group">
                                 <label for="companyName">Bedrijfsnaam</label>
-                                <input class="form-control" id="companyName" name="companyName" required
-                                       th:field="*{companyName}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="companyName" maxlength="45"
+                                       name="companyName" required th:field="*{companyName}" type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="sector">Sector</label>
-                                <select class="form-control" id="sector" name="sector" required th:field="*{sector}">
+                                <select class="form-control" id="sector" name="sector" th:field="*{sector}"
+                                        th:required="true">
+                                    <option value="">Selecteer een sector</option>
                                     <option th:each="sector : ${T(nl.hva.miw.internetbanking.model.Sector).values()}"
-                                            th:selected="${sector==T(nl.hva.miw.internetbanking.model.Sector).NOT_SPECIFIED}"
                                             th:text="${sector.getLabelSector()}" th:value="${sector}">
                                 </select>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
-                            <div class="col-md-4 form-group">
+                            <div class="col-md-2 form-group">
                                 <label for="kvkNumber">KvK-nummer</label>
-                                <input class="form-control" id="kvkNumber" name="kvkNumber" required
-                                       th:field="*{kvkNumber}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="kvkNumber" maxlength="8" minlength="8" name="kvkNumber"
+                                       pattern="^[0-9]{8}$" required th:field="*{kvkNumber}" type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="vatNumber">Btw-nummer</label>
-                                <input class="form-control" id="vatNumber" name="vatNumber" required
+                                <input class="form-control" id="vatNumber" maxlength="12" minlength="12"
+                                       name="vatNumber" pattern="^(NL)?[0-9]{9}B[0-9]{2}$" required
                                        th:field="*{vatNumber}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
@@ -157,68 +151,62 @@
                             <div class="col-md-2 form-group">
                                 <label for="postalCode_legal">Postcode</label>
                                 <input aria-describedby="postalCode_legalHelp" class="form-control"
-                                       id="postalCode_legal" name="postalCode_legal" required
-                                       th:field="*{postalCode}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                       id="postalCode_legal" maxlength="7" minlength="6" name="postalCode_legal"
+                                       pattern="^[0-9]{4}[ A-Z]{2,3}$" required th:field="*{postalCode}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                                 <small class="form-text text-muted" id="postalCode_legalHelp">Format:
                                     1234AB</small>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="homeNumber_legal">Huisnr.</label>
                                 <input aria-describedby="homeNumber_legalHelp" class="form-control"
-                                       id="homeNumber_legal" name="homeNumber_legal" required
-                                       th:field="*{homeNumber}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                       id="homeNumber_legal" maxlength="10" name="homeNumber_legal"
+                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{homeNumber}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                                 <small class="form-text text-muted" id="homeNumber_legalHelp">Format: 123, 12b,
                                     123-I</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="street_legal">Straat</label>
-                                <input class="form-control" id="street_legal" name="street_legal" required
+                                <input class="form-control" id="street_legal" maxlength="45"
+                                       name="street_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
                                        th:field="*{street}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="residence_legal">Plaats</label>
-                                <input class="form-control" id="residence_legal" name="residence_legal" required
+                                <input class="form-control" id="residence_legal" maxlength="45"
+                                       name="residence_legal" pattern="^.*[0-9a-zA-z-. ]{0,}$" required
                                        th:field="*{residence}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="username_legal">Gebruikersnaam</label>
-                                <input class="form-control" id="username_legal" name="username_legal" required
-                                       th:field="*{userName}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="username_legal" maxlength="16" minlength="4"
+                                       name="username_legal" pattern="^(?=[a-zA-Z0-9_]{4,}$)"
+                                       required th:field="*{userName}" type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
-                                <label for="password_business">Wachtwoord</label>
-                                <input class="form-control" id="password_business" name="password" required
-                                       th:value="${businessRegistrationDto.password}" type="password"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <label for="password_legal">Wachtwoord</label>
+                                <input class="form-control" id="password_legal" maxlength="16" minlength="6"
+                                       name="password_legal"
+                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                       required th:field="*{password}" type="password"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
-                                <label for="password_business_confirmation">Bevestig wachtwoord</label>
-                                <input class="form-control" id="password_business_confirmation"
-                                       name="passwordConfirmation" required
-                                       th:value="${businessRegistrationDto.passwordConfirmation}" type="password"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <label for="password_legal_confirmation">Bevestig wachtwoord</label>
+                                <input class="form-control" id="password_legal_confirmation" maxlength="16"
+                                       minlength="6" name="password_legal_confirmation"
+                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                       required th:field="*{passwordConfirmation}" type="password"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-12 mt-3">
                                 <div class="col-md-6 pl-0">
