--- a/src/main/resources/templates/pages/confirmation-private.html
+++ b/src/main/resources/templates/pages/confirmation-private.html
@@ -138,73 +138,64 @@
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="initials">Voorletters</label>
-                                <input class="form-control" id="initials" name="initials" required
+                                <input class="form-control" id="initials" maxlength="10"
+                                       name="initials" pattern="^.*[a-zA-Z. ]{0,}$" required
                                        th:field="*{initials}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="firstname">Voornaam</label>
-                                <input class="form-control" id="firstname" name="firstName" required
-                                       th:field="*{firstName}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="firstname" maxlength="15" name="firstName"
+                                       pattern="^.*[a-zA-Z-. ]{0,}$" required th:field="*{firstName}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="preposition">Tussenvoegsel</label>
-                                <input class="form-control" id="preposition" name="preposition"
-                                       th:field="*{preposition}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="preposition" maxlength="15" name="preposition"
+                                       pattern="^.*[a-zA-Z-. ]{0,}$" th:field="*{preposition}" type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="lastname">Achternaam</label>
-                                <input class="form-control" id="lastname" name="surName" required
-                                       th:field="*{surName}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="lastname" maxlength="45" name="surName"
+                                       pattern="^.*[a-zA-Z-. ]{0,}$" required th:field="*{surName}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="dateOfBirth">Geboortedatum</label>
-                                <input class="form-control" id="dateOfBirth" name="dateOfBirth" required
-                                       aria-describedby="dateOfBirthHelp" th:field="*{dateOfBirth}" type="date"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
-                                <small class="form-text text-muted" id="dateOfBirthHelp">Format: jjjj-mm-dd</small>
+                                <input aria-describedby="dateOfBirthHelp" class="form-control" id="dateOfBirth"
+                                       maxlength="10" minlength="10" name="dateOfBirth"
+                                       pattern="^[0-9]{4}-[0-9]{2}-[0-9]{2}$" required th:field="*{dateOfBirth}"
+                                       type="date"/>
+                                <div class="invalid-feedback"></div>
+                                <small class="form-text text-muted" id="dateOfBirthHelp">Format:
+                                    jjjj-mm-dd</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="socialSecurityNumber">Burgerservicenummer (BSN)</label>
                                 <input aria-describedby="socialSecurityNumberHelp" class="form-control"
-                                       id="socialSecurityNumber"
-                                       name="socialSecurityNumber" required
+                                       id="socialSecurityNumber" maxlength="9" minlength="8"
+                                       name="socialSecurityNumber" pattern="^[0-9]{8,9}$" required
                                        th:field="*{socialSecurityNumber}" type="number"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                                 <small class="form-text text-muted" id="socialSecurityNumberHelp">Je unieke,
-                                    9-cijferige persoonsnummer</small>
+                                    8- of 9-cijferige persoonsnummer</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="email">Emailadres</label>
-                                <input class="form-control" id="email" name="email" required
+                                <input class="form-control" id="email" maxlength="45" name="email" required
                                        th:field="*{email}" type="email"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="mobile">Telefoon (mobiel)</label>
-                                <input aria-describedby="mobileHelp" class="form-control" id="mobile" name="mobile"
-                                       pattern="[0-9]{10}" required th:field="*{phone}" type="tel"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
-                                <small class="form-text text-muted" id="mobileHelp">Format: 0612345678</small>
+                                <input aria-describedby="mobileHelp" class="form-control" id="mobile"
+                                       maxlength="11" name="mobile" pattern="^[06]{2}-[0-9]{8}$" required
+                                       th:field="*{phone}" type="tel"/>
+                                <div class="invalid-feedback"></div>
+                                <small class="form-text text-muted" id="mobileHelp">Format: 06-12345678</small>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
@@ -212,62 +203,61 @@
                             <div class="col-md-2 form-group">
                                 <label for="postalCode">Postcode</label>
                                 <input aria-describedby="postalCodeHelp" class="form-control" id="postalCode"
-                                       name="postalCode" required th:field="*{postalCode}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                       maxlength="7" minlength="6" name="postalCode"
+                                       pattern="^[0-9]{4}[ A-Z]{2,3}$" required th:field="*{postalCode}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                                 <small class="form-text text-muted" id="postalCodeHelp">Format: 1234AB</small>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="homeNumber">Huisnr.</label>
                                 <input aria-describedby="homeNumberHelp" class="form-control" id="homeNumber"
-                                       name="homeNumber" required th:field="*{homeNumber}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                       maxlength="10" name="homeNumber" pattern="^.*[0-9a-zA-z-. ]{0,}$"
+                                       required th:field="*{homeNumber}" type="text"/>
+                                <div class="invalid-feedback"></div>
                                 <small class="form-text text-muted" id="homeNumberHelp">Format: 123, 12b,
                                     123-I</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="street">Straat</label>
-                                <input class="form-control" id="street" name="street" required
-                                       th:field="*{street}" type="text"/>
+                                <input class="form-control" id="street" maxlength="45" name="street"
+                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{street}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="residence">Woonplaats</label>
-                                <input class="form-control" id="residence" name="residence" required
-                                       th:field="*{residence}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="residence" maxlength="45" name="residence"
+                                       pattern="^.*[0-9a-zA-z-. ]{0,}$" required th:field="*{residence}"
+                                       type="text"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="username_private">Gebruikersnaam</label>
-                                <input class="form-control" id="username_private" name="username_private" required
+                                <input class="form-control" id="username_private" maxlength="16"
+                                       minlength="4" name="username_private" pattern="^(?=[a-zA-Z0-9_]{4,}$)"
+                                       required
                                        th:field="*{userName}" type="text"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_private">Wachtwoord</label>
-                                <input class="form-control" id="password_private" name="password" required
-                                       th:value="${privateRegistrationDto.password}" type="password"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                <input class="form-control" id="password_private" maxlength="16"
+                                       minlength="6" name="password_private"
+                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                       required th:field="*{password}" type="password"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_private_confirmation">Bevestig wachtwoord</label>
                                 <input class="form-control" id="password_private_confirmation"
-                                       name="passwordConfirmation" required
-                                       th:value="${privateRegistrationDto.passwordConfirmation}" type="password"/>
-                                <div class="invalid-feedback">
-                                    Hier custom error-message
-                                </div>
+                                       maxlength="16" minlength="6" name="password_private_confirmation"
+                                       pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{6,}$"
+                                       required th:field="*{passwordConfirmation}" type="password"/>
+                                <div class="invalid-feedback"></div>
                             </div>
                             <div class="col-md-12 mt-3">
                                 <div class="col-md-6 pl-0">
